# embr

./: .gitignore  .gitmodules  NOTICE  README.md  library.json
conf/: esp-idf.cmake
examples/rpi/pico/udp-echo/: CMakeLists.txt  README.md  esp_log.h  main.cpp
src/: CMakeLists.txt  sources.cmake
src/embr/: dataport.h  dataport.hpp  datapump.h  datapump.hpp  enum_mask.h  events.h  netbuf-dynamic.h  netbuf-reader.h  netbuf-static.h  netbuf-writer.h  netbuf.h  observer.h  scheduler.h  scheduler.hpp  service.h  streambuf.h  streambuf.hpp  transport-descriptor.h  version.h  word.h
src/embr/bits/: README.md  be-get.hpp  be-set.hpp  bits-temp.hpp  bits.h  bits.hpp  byte.hpp  decoder.h  descriptor.h  encoder.h  le-get.hpp  le-set.hpp  word.hpp
src/embr/bits/detail/: be-get.hpp  be-set.hpp  byte.hpp  features.h  le-get.hpp  le-set.hpp
src/embr/c++03/: enum_mask.h  word.h
src/embr/detail/: button.h  button.hpp  debounce.h  debounce.hpp
src/embr/exp/: autostart.h  dataport-v2.h  datapump-v2.h  filter.h  netbuf-alloc.h  pbuf.h  property-event.h  property-fwd.h  property-macro.h  property.h  refsubject.h  retry-v2.h  retry-v4.h  rtti.h  runtime-chrono.h  service-fwd.h  service.h  service.hpp  thunk.h  transport-v1.h
src/embr/exp/platform/freertos/: fasio.h  scheduler.h
src/embr/exp/platform/fwd/: README.md  transport.h
src/embr/exp/platform/lwip/: README.md  core.h  netbuf.h  pbuf.h  transport-netconn.h  transport-udp.h  transport.h
src/embr/exp/v1/: transport.h
src/embr/fwd/: flags.h  narrow_cast.h  observer.h  type_from_bits.h  word.h
src/embr/fwd/bits/: base.h  bits.h  enum.h  get.h  set.h  word.h
src/embr/fwd/c++03/: enum_mask.h
src/embr/internal/: allow_notify.h  argtype.h  bitset.h  delegate_queue.h  features.h  flags.h  fwd.h  general.cpp  narrow_cast.h  notify_helper.h  pack.h  runtime-ratio.h  scheduler.h  scoped_guard.h  scoped_lock.h  subject.h  type_from_bits.h  unique.h  word.h
src/embr/internal/bits/: base.h
src/embr/internal/ble/: README.md
src/embr/internal/ble/gatt/: ets.h
src/embr/internal/debounce/: reference.h  ultimate.h
src/embr/internal/impl/: fwd.h  scheduler.h  time_point.h
src/embr/internal/observer/: features.h  notified.h
src/embr/internal/zip/: headers.h  ostreambuf.h
src/embr/json/: decoder.h
src/embr/json/v1/: encoder.h  encoder.hpp  fluent.h
src/embr/obsolete/: README.md  dataport.h  events.h  netbuf_streambuf.h
src/embr/obsolete/bits/: le-get.hpp  le-set.hpp
src/embr/obsolete/bits/details/: be-get.hpp
src/embr/obsolete/exp/: datapump-core-v2.h
src/embr/obsolete/lwip/legacy/: pbuf-netbuf.h  streambuf.h
src/embr/platform/: guard-in.h  guard-out.h
src/embr/platform/arduino/: debounce.h  scheduler.h
src/embr/platform/esp-idf/: README.md  adc.h  allocator.h  app_format.h  debounce.cpp  debounce.h  debounce.hpp  debounce2.h  esp_timer.h  fwd.h  gpio.h  gptimer.h  ledc.h  log.h  nvs.h  pm.h  queue.h  rebase.h  spi.h  timer-scheduler.cpp  timer-scheduler.h  timer-scheduler.hpp  timer.h  traits.h  twai.h
src/embr/platform/esp-idf/component/: http_server.h  led_strip.h
src/embr/platform/esp-idf/features/: debounce.h
src/embr/platform/esp-idf/freertos/: timer.h
src/embr/platform/esp-idf/internal/: scoped_guard.h
src/embr/platform/esp-idf/service/: adc.h  adc.hpp  core.h  diagnostic.h  esp-now.h  esp-now.hpp  event.h  event.hpp  flash.h  flash.hpp  gpio.h  gpio.hpp  gptimer.h  gptimer.hpp  ledc.h  ledc.hpp  pm.h  pm.hpp  protocomm.h  protocomm.hpp  result.h  twai.h  twai.hpp  wifi.h  wifi.hpp  wifi_provisioner.h  wifi_provisioner.hpp
src/embr/platform/esp-idf/spi/: device.h  streambuf.h  transaction.h
src/embr/platform/esp-idf/usb-serial-jtag/: streambuf.h
src/embr/platform/freertos/: scheduler.h  scheduler.hpp
src/embr/platform/freertos/exp/: transport-retry.h
src/embr/platform/freertos/service/: worker.h  worker.hpp
src/embr/platform/lwip/: dataport.h  endpoint.h  features.h  fwd.h  iostream.h  istream.h  netbuf.h  netconn.h  netif.h  ostream.h  pbuf.h  raw.h  streambuf.h  tcp.h  transport.h  transport.hpp  udp.h  version.h
src/embr/platform/lwip/internal/: pbuf.h
src/embr/platform/lwip/legacy/: pbuf-netbuf.h  streambuf.h
src/embr/platform/lwip/streambuf/: README.md  base.h  ipbuf.h  netconn.h  opbuf.h  opbuf.hpp  tcp_pcb.h
src/embr/platform/lwip/v1/: pbuf.h
src/embr/platform/lwip/v2/: pbuf.h
src/embr/platform/tinyusb/: README.md  streambuf.h
src/embr/platform/tinyusb/streambuf/: base.h  in.h  out.h
src/embr/property/: event.h  fwd.h  macros.h  notifier.h
src/embr/property/v1/: event.h  fwd.h  macros.h  notifier.h  traits.h  unwrap.h
src/embr/service/: service_v1.cpp
src/embr/service/v1/: enum.h  event.h  fwd.h  macros.h  service.h  sparse.h
src/embr/storage/: funclist.h  fwd.h  objlist.h  objlist_element.h  objlist_element.hpp  objstack.h
src/embr/units/: amps.h  base.h  celsius.h  decibels.h  feet.h  frequency.h  fwd.h  kelvins.h  meters.h  pascals.h  rpm.h  seconds.h  volts.h  volume.h  watts.h
test/c++03/: CMakeLists.txt  main.cpp
test/catch/: CMakeLists.txt  CMakeLists.txt.user.e11ef9f  basics-test.cpp  bits-test.cpp  bitset-test.cpp  dataport-test.cpp  datapump-test.cpp  datapump-test.h  debounce-test.cpp  delegate-queue-test.cpp  experimental-test.cpp  ios-test.cpp  json-test.cpp  main.cpp  netbuf-test.cpp  objlist-test.cpp  observer-test.cpp  property-test.cpp  property-test.h  reader-test.cpp  rebase-test.h  runtime-ratio-test.cpp  scheduler-test.cpp  scheduler-test.h  service-test.cpp  streambuf-test.cpp  test-data.h  test-observer.h  thunk-test.cpp  units-test.cpp  word-test.cpp  writer-test.cpp
test/catch/obsolete/: ios-test.cpp  reader-test.cpp
test/rpi/pico/support/: CMakeLists.txt  init.cpp  loop.cpp  lwipopts.h
test/rpi/pico/udp-echo/: CMakeLists.txt  main.cpp
test/rpi/pico/unity/: CMakeLists.txt  main.cpp
test/unity/: CMakeLists.txt  README.md  bits.cpp  delegate-queue.cpp  lwip.cpp  main.cpp  objlist.cpp  observer.cpp  pbuf.cpp  setup.cpp  sources.cmake  transport.cpp  unit-test.h  word.cpp
test/unity/obsolete/: pbuf.cpp
(+318 files in other folders)
